# perception_eval_rs

./: .cspell.json  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build-and-test.yml  cancel-previous-workflows.yml  clippy.yml  examples.yml  rustfmt.yml  test.yml
examples/: config.rs  dataset.rs  detection.rs  eval.rs
src/: config.rs  dataset.rs  evaluation_task.rs  filter.rs  frame_id.rs  label.rs  lib.rs  logger.rs  manager.rs  matching.rs  math.rs  metrics.rs  object.rs  point.rs  result.rs  threshold.rs  utils.rs
src/config/: schema.rs
src/dataset/: nuscenes.rs
src/dataset/nuscenes/: box.rs  error.rs  internal.rs  iter.rs  iter_impl.rs  lib.rs  schema.rs
src/dataset/nuscenes/iter_impl/: attribute.rs  calibrated_sensor.rs  category.rs  ego_pose.rs  instance.rs  log.rs  map.rs  sample.rs  sample_annotation.rs  sample_data.rs  scene.rs  sensor.rs  visibility.rs
src/metrics/: config.rs  detection.rs  error.rs  score.rs  tp_metrics.rs
src/object/: object3d.rs
src/result/: frame.rs  object.rs
src/utils/: logger.rs  math.rs  point.rs
tests/config/: perception.yaml
tests/sample_data/annotation/: instance.json  sample.json  sample_data.json  scene.json
