[package]
name = "perception-eval"
version = "0.1.0"
authors = ["Kotaro Uetak <kotaro.uetake@tier4.jp>"]
edition = "2021"
description = "A Rust wrapper of tier4/autoware_perception_evaluation"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
hex = "0.4.3"
image = "0.24.6"
nalgebra = "0.32.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
